# aipo_insighter_tg_bot

./: bot.py  docker-compose.yml  pyproject.toml
bot/: service.py  utils.py
bot/config/: bot_configs.py
bot/handlers/: command_handler.py  user_handler.py
bot/keyboards/: inline_keyboards.py  main_menu.py
bot/models/: request_result.py  start_process.py
bot/s3/selectel_api/: StorageClient.py  s3_client.py  text.txt
domain/enteties/: message_enteties.py
web/api/: exteranl_databse_queries.py
web/nats_listener/: listener.py
