[tool.poetry]
name = "insighter-telegram-bot"
version = "0.1.0"
description = ""
authors = ["artemprod <artemprod1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nats-py = "^2.7.2"
pydantic = "^2.7.1"
aiohttp = "^3.9.5"
aiogram = "^3.5.0"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
